cabal-version: 3.0
name:
  quux
version:
  0.1.0.0
synopsis:

-- description:
homepage:

-- bug-reports:
-- license:
-- license-file:
-- author:
-- maintainer:

-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md

executable quux
  main-is:
    Main.hs
  -- other-modules:

  build-depends:
    , base

  hs-source-dirs:
    app
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

  -- default-extensions:
  -- other-extensions:
